# soul-of-adventure

./: Cargo.toml  \
assets/dungeons/: I_room.glb  dungeon_floor_3x3.glb
assets/manifests/: character_models.assets.ron  player_animations.assets.ron  static_models.assets.ron
src/: camera.rs  input.rs  main.rs  room_builder.rs
src/animation/: mod.rs
src/physics/: lateral.rs  mod.rs  vertical.rs
src/player/: animation.rs  mod.rs  movement.rs
